--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,16 @@ jobs:
           # Actions от github: проверяет репозиторий, гит и т.д.
           - uses: actions/checkout@v3
 
-          - name: Create IAM token
-            uses: bigtows/yc-token@latest
-            id: generation-iam-token
+          - name: IAM Token
+            id: issue-iam-token
+            uses: yc-actions/yc-iam-token@v1
             with:
-              service-account-token: ${{ secrets.SERVICE_ACCOUNT_TOKEN }}
-              type-token: iam
+              yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
               
           - name: Import secrets
             uses: mimbol22/yandex-lockbox@latest
             with:
-              iam_token: ${{ steps.generation-iam-token.outputs.iam-token }}
+              iam_token: ${{ steps.issue-iam-token.outputs.iam-token }}
               folder_id: ${{ secrets.YC_FOLDER_ID }}
               secret_prefix: DEV_
               is_clean_prefix: false
