--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,4 +37,4 @@ jobs:
             run: |
               echo "$LOCKBOX_DEV_SUPER_SECRET_KEY" | base64
             env:
-                LOCKBOX_DEV_SUPER_SECRET_KEY: ${{ env.LOCKBOX_DEV_SUPER_SECRET_KEY }}
+                LOCKBOX_DEV_SUPER_SECRET_KEY: ${{ vars.LOCKBOX_DEV_SUPER_SECRET_KEY }}
